[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dfc77gen"
version = "1.0"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sounddevice",
]

[project.scripts]
dfc77-sync = "dfc77gen.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
