[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dcf77gen"
version = "2.1"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "sounddevice",
]

[project.scripts]
dcf77-sync = "dcf77gen.cli.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
